--- a/css/tablas.css
+++ b/css/tablas.css
@@ -2,6 +2,10 @@ table,th,td{
   border: 1px solid white;
   border-collapse: collapse;
 }
+.centro{
+  width:400px;
+  margin:0 auto;
+}
 .btn1{
   font-family: Minecraft;
   background-color: rgb(36, 36, 36);
