--- a/css/tablas.css
+++ b/css/tablas.css
@@ -27,6 +27,27 @@ table,th,td{
   color: rgb(36, 36, 36);
   box-shadow: 0 0 10px rgb(0, 255, 255), 0 0 40px rgb(0, 255, 255), 0 0 80px rgb(0, 255, 255);
 }
+.btn{
+  font-family: Minecraft;
+  background-color: rgb(36, 36, 36);
+  border: 2px solid rgb(0, 255, 255);
+  color: #fff;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-size: 20px;
+  transition-duration: 0.5;
+}
+.btn:hover{
+  background-color: rgb(0, 255, 255);
+  border: 2px solid rgb(0,150, 255);
+  color: rgb(36, 36, 36);
+  box-shadow: 0 0 10px rgb(0, 255, 255), 0 0 40px rgb(0, 255, 255), 0 0 80px rgb(0, 255, 255);
+}
 
 
 .btn2{
