--- a/css/tablas.css
+++ b/css/tablas.css
@@ -20,6 +20,7 @@ table,th,td{
   cursor: pointer;
   font-size: 20px;
   transition-duration: 0.5;
+  border-radius: 10px;
 }
 .btn1:hover{
   background-color: rgb(0, 255, 255);
@@ -64,6 +65,7 @@ table,th,td{
   cursor: pointer;
   font-size: 20px;
   transition-duration: 0.5;
+  border-radius: 10px;
 }
 .btn2:hover{
   background-color: rgb(0, 150, 255);
