--- a/css/botones.css
+++ b/css/botones.css
@@ -1,9 +1,9 @@
-.btn{
+.btnm{
   font-family: Minecraft;
   background-color: rgb(36, 36, 36);
   border: 2px solid rgb(0, 255, 255);
   color: #fff;
-  padding: 15px 32px;
+  padding: 1px 6px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -12,8 +12,9 @@
   cursor: pointer;
   font-size: 20px;
   transition-duration: 0.5;
+  border-radius: 10px;
 }
-.btn:hover{
+.btnm:hover{
   background-color: rgb(0, 255, 255);
   border: 2px solid rgb(0,150, 255);
   color: rgb(36, 36, 36);
@@ -34,6 +35,7 @@
   cursor: pointer;
   font-size: 20px;
   transition-duration: 0.5;
+  border-radius: 10px;
 }
 .btn:hover{
   background-color: rgb(0, 255, 255);
