--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,6 +33,12 @@ body {
   text-align: center;
   margin-bottom: 60px;
 }
+label {
+  color: #0ff;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 60px;
+}
 header {
   width: 100%;
   height: 600px;
