--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,7 +35,11 @@ body {
 }
 label {
   color: #0ff;
-  font-size: 20px;
+  text-align: center;
+  margin-bottom: 60px;
+}
+p {
+  color: #0ff;
   text-align: center;
   margin-bottom: 60px;
 }
