--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,10 @@
 body {
   font-family: Minecraft;
 }
+.centro{
+  width: 196px;
+  margin: 0 auto;
+}
 .contenedor {
   padding: 60px 0;
   width: 90%;
