--- a/css/botones.css
+++ b/css/botones.css
@@ -1,7 +1,29 @@
+:root:{
+  --cielo: rgb(0, 255, 255);
+  --blanco: rgb(255, 255, 255);
+  --negro: rgb(36, 36, 36);
+}
+#user, #pass{
+  padding: 1px 1px;
+  text-align: center;
+  background-color: var(--negro);
+  color: var(--blanco);
+  box-shadow: 0 0;
+  border: 2px solid var(--cielo);
+  border-radius: 8px;
+}
+#user:hover, #pass:hover{
+  color: var(--negro);
+  background-color: var(--cielo);
+  box-shadow: 0 0 1px var(--cielo), 0 0 4px var(--cielo), 0 0 8px var(--cielo);
+}
+#pass{
+  width: 130px;
+}
 .btnm{
   font-family: Minecraft;
-  background-color: rgb(36, 36, 36);
-  border: 2px solid rgb(0, 255, 255);
+  background-color: var(--negro);
+  border: 2px solid var(--cielo);
   color: #fff;
   padding: 1px 6px;
   text-align: center;
@@ -15,16 +37,16 @@
   border-radius: 10px;
 }
 .btnm:hover{
-  background-color: rgb(0, 255, 255);
+  background-color: var(--cielo);
   border: 2px solid rgb(0,150, 255);
-  color: rgb(36, 36, 36);
-  box-shadow: 0 0 10px rgb(0, 255, 255), 0 0 40px rgb(0, 255, 255), 0 0 80px rgb(0, 255, 255);
+  color: var(--negro);
+  box-shadow: 0 0 10px var(--cielo), 0 0 40px var(--cielo), 0 0 80px var(--cielo);
 }
 
 .btn{
   font-family: Minecraft;
-  background-color: rgb(36, 36, 36);
-  border: 2px solid rgb(0, 255, 255);
+  background-color: var(--negro);
+  border: 2px solid var(--cielo);
   color: #fff;
   padding: 15px 32px;
   text-align: center;
@@ -38,8 +60,8 @@
   border-radius: 10px;
 }
 .btn:hover{
-  background-color: rgb(0, 255, 255);
+  background-color: var(--cielo);
   border: 2px solid rgb(0,150, 255);
-  color: rgb(36, 36, 36);
-  box-shadow: 0 0 10px rgb(0, 255, 255), 0 0 40px rgb(0, 255, 255), 0 0 80px rgb(0, 255, 255);
+  color: var(--negro);
+  box-shadow: 0 0 10px var(--cielo), 0 0 40px var(--cielo), 0 0 80px var(--cielo);
 }
