--- a/css/botones.css
+++ b/css/botones.css
@@ -8,7 +8,7 @@
   border-radius: 8px;
 }
 #user:hover, #pass:hover{
-  color: var(--negro);
+  color: rgb(36, 36, 36);
   background-color: rgb(0, 255, 255);
   box-shadow: 0 0 1px rgb(0, 255, 255), 0 0 4px rgb(0, 255, 255), 0 0 8px rgb(0, 255, 255);
 }
