--- a/css/estilos.css
+++ b/css/estilos.css
@@ -111,6 +111,7 @@ header .textos-header{
   flex-wrap: wrap;
 }
 .imagen-port{
+  border-radius: 15px;
   width: 24%;
   height: 24%;
   margin-bottom: 10px;
@@ -141,12 +142,13 @@ header .textos-header{
   display: block;
 }
 .hover-galeria{
+  border-radius: 15px;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   transform: scale(0);
-  background: rgba(255, 0, 0, 0.363);
+  background: #00ffff5e;
   transition: transform .5s;
   display: flex;
   justify-content: center;
