--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,13 +50,13 @@ p {
 header {
   width: 100%;
   height: 600px;
-  background: url(../img/fondo.png);
+  background: url(/img/fondo.png);
   background-size: cover;
   background-attachment: fixed;
   position: relative;
 }
 header#seo {
-  background: url(../img/fondo.png);
+  background: url(/img/JunMC13/fondo.png);
 }
 nav{
   text-align: right;
