--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,7 +55,7 @@ header {
   background-attachment: fixed;
   position: relative;
 }
-header#seo {
+header#JunMC13 {
   background: url(/img/JunMC13/fondo.png);
 }
 nav{
