--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: rgb(0, 255, 255);
+  color: rgb(255, 0, 0);
 }
 @font-face {
   font-family: Minecraft;
@@ -23,7 +23,6 @@ body {
   overflow: hidden;
 }
 .titulo {
-  color: rgb(0, 255, 255);
   font-size: 30px;
   text-align: center;
   margin-bottom: 60px;
@@ -33,18 +32,15 @@ body {
   margin-left: 30%;
 }
 .texto {
-  color: #0ff;
   font-size: 20px;
   text-align: center;
   margin-bottom: 60px;
 }
 label {
-  color: #0ff;
   text-align: center;
   margin-bottom: 60px;
 }
 p {
-  color: #0ff;
   text-align: center;
 }
 header {
@@ -80,7 +76,6 @@ nav > a:hover{
   text-decoration: underline;
 }
 h3 > a{
-  color:#0ff;
   font-weight: 300;
   text-decoration: none;
   margin-right: 10px;
@@ -130,7 +125,7 @@ header .textos-header{
   overflow: hidden;
   position: relative;
   cursor: pointer;
-  box-shadow: 0 0 6px 0 rgba(0, 255, 255, .5);
+  box-shadow: 0 0 6px 0 rgba(255, 0, 0, .5);
 }
 .imagen-port > img{
   width: 100%;
@@ -145,7 +140,7 @@ header .textos-header{
   overflow: hidden;
   position: relative;
   cursor: pointer;
-  box-shadow: 0 0 6px 0 rgba(0, 255, 255, .5);
+  box-shadow: 0 0 6px 0 rgba(255, 0, 0, .5);
 }
 .imagen-craft > img{
   width: 100%;
@@ -160,7 +155,7 @@ header .textos-header{
   height: 100%;
   top: 0;
   transform: scale(0);
-  background: #00ffff5e;
+  background: rgba(255, 0, 0, .5);
   transition: transform .5s;
   display: flex;
   justify-content: center;
@@ -188,7 +183,7 @@ footer{
   justify-content: space-evenly;
   margin: auto;
   padding-bottom: 50px;
-  border-bottom: 1px solid rgb(0, 255, 255);
+  border-bottom: 1px solid rgb(255, 0, 0);
 }
 .content-foo{
   text-align: center;
@@ -198,7 +193,7 @@ footer{
 }
 .content-foo h4{
   color: #fff;
-  border-bottom: 3px solid rgb(0, 255, 255);
+  border-bottom: 3px solid rgb(255, 0, 0);
   padding-bottom: 5px;
   margin-bottom: 10px;
 }
@@ -207,7 +202,6 @@ footer{
   text-align: center;
   font-size: 24px;
   margin: 20px 0 0 0;
-  color: #00fff2;
 }
 @media screen and (max-width:900px){
   header{
@@ -254,7 +248,7 @@ footer{
   }
   .content-foo p > a{
     color: #ccc;
-    border-bottom: 1px solid rgb(0, 255, 255);
+    border-bottom: 1px solid rgb(255, 0, 0);
     padding-bottom: 20px;
   }
   .titulo-final{
