--- a/src/css/links.css
+++ b/src/css/links.css
@@ -5,11 +5,10 @@
   margin-right: 10px;
 }
 .link-s:hover{
-  color:#0ff;
   text-decoration: underline;
 }
 .link{
-  color:#0ff;
+  color:rgb(255, 0, 0);
   text-decoration: none;
 }
 .link:hover{
