--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   color: rgb(255, 0, 0);
+  font-family: Minecraft;
 }
 @font-face {
   font-family: Minecraft;
@@ -10,6 +11,10 @@
 }
 body {
   font-family: Minecraft;
+}
+input, button{
+  background-color: rgb(30, 30, 30);
+  text-align: center;
 }
 .centro{
   width: 196px;
