--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -18,14 +18,12 @@ input, button{
 }
 
 .spinner {
-  background-color: rgba(82, 82, 82, 0.9);
-  height: 100%;
-  width: 100%;
   position: fixed;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
-  z-index: 10000;
+  left: 0;
+  background: rgba(255, 0, 0, 0.5);
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 #carga {
   border: 15px solid #f3f3f3;
