--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -17,7 +17,7 @@ input, button{
   text-align: center;
 }
 
-.spinner {
+#spinner {
   position: fixed;
   left: 0;
   background: rgba(255, 0, 0, 0.5);
