--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -91,7 +91,7 @@ header {
   position: relative;
 }
 header#JunSP13 {
-  background: url(/src/img/JunMC13/fondo.png);
+  background: url(/src/img/JunSP13/fondo.png);
   background-size: cover;
   background-attachment: fixed;
 }
