--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -16,6 +16,19 @@ input, button{
   background-color: rgb(30, 30, 30);
   text-align: center;
 }
+button#search{
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+input#search{
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+button#signout{
+  border-radius: 20px;
+}
 
 div#spinner {
   position: fixed;
